@@ -1,3 +1,11 @@
+2007-07-14  Luca Bruno  <lethalman88@gmail.com>
+
+	* syx/syx-lexer.c (_syx_char_is_binary_second): fixed '-' character from being used as second char for binary messages (e.g 4/-3 should be handled as 4 / -3)
+
+	* st/kernel/SmallInteger.st (/): added
+	
+	* st/kernel/Fraction.st: added
+
 2007-07-13  Luca Bruno  <lethalman88@gmail.com>
 
 	== Released 0.1.2 version ==
@@ -18,7 +26,6 @@
 	* st/kernel/Number.st (to:by:reverseDo:): added
 
 	* st/kernel/ArrayedCollection.st (copyWith:): added
-	
 
 	* st/kernel/Collection.st (copyWith:): added 
 
